# aim-rookie-courses

./: ENV_SETUP.md  README.md
.github/workflows/: post-merge.yml
1-OS-Basic/: README.md
1-OS-Basic/Lesson-1/: README.md
2-Python/Lesson-2/: README.md
2-Python/Lesson-3/: README.md
3-OpenCV/: README.md
3-OpenCV/Lesson-1/: README.md
Algorithm+Electronic/: README.md
Algorithm+Electronic/2-OS-Basic/: README.md
Algorithm+Electronic/2-OS-Basic/Lesson-1/: README.md
Algorithm+Electronic/4-ROS2/: README.cpp.md  README.md
Algorithm+Electronic/4-ROS2/Cpp/: README.md
Algorithm+Electronic/4-ROS2/Python/: README.md
Contents/Cpp/: .gitignore  CMakeLists.txt  README.md
Contents/Cpp/Lesson 01/: my_first_cplus.cpp  stupid_namespace.cpp  stupid_namespace.h
Contents/Cpp/Lesson 02/: my_second_cpp.cpp
Contents/Linux/: ENV_SETUP.md  ENV_SETUP_MACOS.md  ENV_SETUP_WINDOWS.md  README.md
Contents/Linux/Lesson-1/: README.md  linux0.md  linux1.md  linux2.md  linux3.md  linux4.md  linux5.md  linux6.md  linux7.md  linux8.md  linux9.md
Contents/Linux/Lesson-2/: README.md
Contents/Linux/Section-1/: README.md  linux0.md  linux1.md  linux2.md  linux3.md
Contents/Linux/Section-2/: README.md
Contents/Mechanic/: README.md
Contents/OS-Basic/: README.md
Contents/OS-Basic/Lesson-1/: README.md  linux1.md
Contents/OpenCV/: README.md
Contents/Python/: ENVIRONMENT.md  ENV_SETUP.md  README.md
Contents/Python/Lesson-1/: Lecture.ipynb  README.md
Contents/Python/Lesson-2/: Lecture.ipynb  README.md
Contents/Python/Lesson-3/: Lecture.ipynb  README.md
Contents/ROS2/: README.md
Contents/ROS2/ros_ws/src/example_ros2_interfaces/: CMakeLists.txt  package.xml
Contents/ROS2/ros_ws/src/service/: CMakeLists.txt  package.xml
Contents/ROS2/ros_ws/src/service/src/: client.cpp  server.cpp
Contents/ROS2/ros_ws/src/topic/: CMakeLists.txt  package.xml
Contents/ROS2/ros_ws/src/topic/src/: publisher_0.cpp  subscriber_0.cpp
Routes/Computing/: README.md
Routes/Computing/Algorithm/Navigation/: README.md
Routes/Computing/Algorithm/Vision/: README.md
Routes/Computing/Algorithm/Vision/Aiming/: README.md
Routes/Computing/Algorithm/Vision/Radar/: README.md
Routes/Computing/Electronic/: README.md
Routes/Mechanic/: README.md
